[gd_scene load_steps=12 format=3 uid="uid://by2bg2xi2whhr"]

[ext_resource type="Script" path="res://Belajar/menu_belajar.gd" id="1_ufiue"]
[ext_resource type="Texture2D" uid="uid://bmavohttjowte" path="res://Assets/GUI/Math Game Assets/Backgrounds/BG1_Landscape.png" id="2_dwatu"]
[ext_resource type="FontFile" uid="uid://bn4v25tysqslj" path="res://Assets/GUI/grass/Font for text/Gluten/static/Gluten-Bold.ttf" id="3_6bswy"]
[ext_resource type="Texture2D" uid="uid://cf2xpsapq01xv" path="res://Assets/GUI/grass/Menu Buttons/Clear Menu Buttons/Grass-Buttons-arrow3.png" id="3_tw4nk"]
[ext_resource type="Texture2D" uid="uid://n1jjohy4ybry" path="res://Assets/GUI/button_angka.png" id="5_7dabr"]
[ext_resource type="Texture2D" uid="uid://dtvu5wl0hqhci" path="res://Assets/GUI/grass/Menu Buttons/Clear Menu Buttons/Pressed/Buttons-pressed-arrow3.png" id="5_m7trb"]
[ext_resource type="Texture2D" uid="uid://caam71g0e6aqx" path="res://Assets/GUI/button_angka_pressed.png" id="6_mp3b7"]
[ext_resource type="Texture2D" uid="uid://b56tmui4177c2" path="res://Assets/GUI/button_angka_hover.png" id="7_uebrk"]
[ext_resource type="Texture2D" uid="uid://d6ppolulj7v6" path="res://Assets/GUI/button-huruf.png" id="9_2s6de"]
[ext_resource type="Texture2D" uid="uid://btngn7irbah41" path="res://Assets/GUI/button-huruf-pressed.png" id="10_rac4o"]
[ext_resource type="Texture2D" uid="uid://bsnmosfr481ye" path="res://Assets/GUI/button-huruf-hover.png" id="11_e5o7l"]

[node name="MenuBelajar" type="Node2D"]
script = ExtResource("1_ufiue")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_dwatu")
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
clip_contents = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -227.0
offset_top = 89.0
offset_right = 227.0
offset_bottom = 171.0
grow_horizontal = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.470588, 0.321569, 0.435294, 1)
theme_override_constants/outline_size = 28
theme_override_fonts/normal_font = ExtResource("3_6bswy")
theme_override_font_sizes/normal_font_size = 78
bbcode_enabled = true
text = "[center]BELAJAR[/center]"

[node name="Kembali" type="TextureButton" parent="CanvasLayer"]
offset_left = 39.0
offset_top = 40.0
offset_right = 142.0
offset_bottom = 148.0
texture_normal = ExtResource("3_tw4nk")
texture_pressed = ExtResource("5_m7trb")
ignore_texture_size = true
stretch_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.586
anchor_right = 0.5
anchor_bottom = 0.586
offset_left = -338.0
offset_top = -151.728
offset_right = 337.0
offset_bottom = 152.272
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 110
alignment = 1

[node name="Button" type="TextureButton" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../Button2")
focus_neighbor_top = NodePath("../../Kembali")
focus_neighbor_right = NodePath("../Button2")
keep_pressed_outside = true
texture_normal = ExtResource("9_2s6de")
texture_pressed = ExtResource("10_rac4o")
texture_hover = ExtResource("11_e5o7l")
ignore_texture_size = true
stretch_mode = 0

[node name="Button2" type="TextureButton" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../Button")
focus_neighbor_top = NodePath("../../Kembali")
focus_neighbor_right = NodePath("../Button")
texture_normal = ExtResource("5_7dabr")
texture_pressed = ExtResource("6_mp3b7")
texture_hover = ExtResource("7_uebrk")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="CanvasLayer/Kembali" to="." method="_on_kembali_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
